reports/homeworks/HW_06.err.log
Traceback (most recent call last):
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/ryan/.conda/envs/work3-9/lib/python3.9/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def dfdt(q1,q2,q3,t):
    df=dfdq(q1,q2,q3,t)
    dfdt = # your work
------------------

[0;36m  File [0;32m"<ipython-input-9-a3940f7b2fd5>"[0;36m, line [0;32m3[0m
[0;31m    dfdt = # your work[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-9-a3940f7b2fd5>, line 3)

